test(Meeting Service): add CRUD tests, minor refactoring